# DataikuToFabric

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: agent-instructions.md  copilot-instructions.md
.github/agents/: assessor.agent.md  connection_mapper.agent.md  converter.agent.md  dataset_migrator.agent.md  dax.agent.md  deployer.agent.md  extractor.agent.md  generator.agent.md  merger.agent.md  orchestrator.agent.md  pipeline_builder.agent.md  python_converter.agent.md  reviewer.agent.md  semantic.agent.md  shared.instructions.md  sql_converter.agent.md  tester.agent.md  validator.agent.md  visual.agent.md  visual_converter.agent.md  wiring.agent.md
.github/workflows/: ci.yml
config/: config.template.yaml
docs/: AGENTS.md  ARCHITECTURE.md  DEVPLAN.md  SETUP.md  TROUBLESHOOTING.md  UPGRADE_PLAN.md
examples/: README.md  run_demo.py  sample_config.yaml
examples/input/: project.json
plugins/: sample_plugin.py
src/: __init__.py  cli.py
src/agents/: __init__.py  base_agent.py  connection_agent.py  dataset_agent.py  discovery_agent.py  flow_pipeline_agent.py  python_migration_agent.py  sql_migration_agent.py  validation_agent.py  visual_recipe_agent.py
src/analyzers/: __init__.py  project_analyzer.py  strategy_advisor.py
src/api/: __init__.py  job_manager.py  server.py
src/connectors/: __init__.py  dataiku_client.py  fabric_client.py
src/core/: config.py  logger.py  orchestrator.py  (+1 more)
templates/: pipeline_template.json  warehouse_table.sql
tests/: conftest.py  test_api_server.py  test_assessment.py  test_checkpoint_resume.py  test_cli.py  test_config.py  test_connection_agent.py  test_data_migration.py  test_dataiku_client.py  test_dataset_agent.py  test_discovery_agent.py  test_equivalence_regression.py  test_flow_pipeline_agent.py  test_lineage.py  test_logger.py  test_merge.py  test_oracle_translation.py  test_plugins.py  test_postgres_translation.py  test_python_agent.py  test_python_translator.py  test_qa_suite.py  test_realistic_fixtures.py  test_registry.py  test_schema_drift.py  test_self_healing.py  test_sql_agent.py  test_translators.py  test_validation_agent.py  test_visual_agent.py  test_visual_recipe.py
(+87 files in other folders)
